--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
-    "pm2": "pm2"
+    "start": "pm2 delete ecosystem.config.js && pm2 start ecosystem.config.js && pm2 save",
+    "start:dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
