--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "pm2 delete ecosystem.config.js && pm2 start ecosystem.config.js && pm2 save",
+    "restart": "pm2 restart ecosystem.config.js",
     "start:dev": "nodemon index.js"
   },
   "repository": {
