--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "homepage": "https://github.com/kaskadi/repo-sync-api#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pm2": "^4.5.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
-    "pm2": "^4.5.1",
     "standard": "^16.0.3"
   }
 }
