--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "kaskadi-cli": "^1.8.2",
-    "pm2": "^4.5.1"
+    "kaskadi-cli": "^1.8.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
