Updated start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 delete ecosystem.config.js && pm2 save && kaskadi service install -n repo-sync-api -e $PWD/index.js",
+    "start": "kaskadi service uninstall -n repo-sync-api && kaskadi service install -n repo-sync-api -e $PWD/index.js -r",
     "restart": "systemctl --user restart repo-sync-api",
     "start:dev": "nodemon index.js"
   },
